--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mendixmodelsdk": "^4.89.0",
     "mendixplatformsdk": "^5.1.3"
   },
   "name": "pdf2mx",
   "version": "1.0.0",
   "description": "A package to take a json structure and convert it to a mendix form, using the model sdk",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "devDependencies": {
+    "@types/node": "^20.14.12",
+    "typescript": "^5.5.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "add": "node dist/addPage.js",
+    "remove": "node dist/removePage.js",
+    "build": "tsc"
   },
   "author": "Conner Charlebois & Luke Karlovich",
   "license": "ISC"
