--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/node": "^20.14.12",
+    "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   },
   "scripts": {
@@ -18,6 +19,7 @@
     "start": "node dist/index.js",
     "add": "node dist/addPage.js",
     "remove": "node dist/removePage.js",
+    "dev": "nodemon --exec \"npm run build\" --watch src -e .ts",
     "build": "tsc"
   },
   "author": "Conner Charlebois & Luke Karlovich",
